# tesseract

./: .gitignore  llogo.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  data.ts  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs  native_ssh.rs  settings.rs  sftp.rs  ssh.rs  store.rs  system.rs
frontend/src/components/: ConnectFlow.tsx  Dashboard.tsx  EditConnectionModal.tsx  HomeScreen.tsx  HostKeyModal.tsx  KeysView.tsx  LocalTerminalPane.tsx  Palette.tsx  RealTerminalPane.tsx  SettingsView.tsx  SftpView.tsx  Sidebar.tsx  TerminalView.tsx  TopBar.tsx
frontend/src/components/layout/: ConnectionForm.tsx  Sidebar.tsx
frontend/src/components/terminal/: TerminalArea.tsx  TerminalTab.tsx
frontend/src/components/ui/: button.tsx  input.tsx  label.tsx  select.tsx
frontend/src/hooks/: useServerStats.ts
frontend/src/lib/: platform.ts
frontend/src/store/: connections.ts  index.ts
frontend/src/types/: index.ts
frontend/src/ui/: ContextMenu.tsx  Logo.tsx  OsIcon.tsx  TweaksPanel.tsx  icons.tsx  primitives.tsx
