[package]
name = "tesseract"
version = "0.1.0"
description = "Tesseract SSH Client"
authors = []
edition = "2021"

[lib]
name = "tesseract_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
russh = "0.45"
russh-keys = "0.45"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
portable-pty = "0.8"
chrono = { version = "0.4", features = ["clock"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
